--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_movie_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,9 +14,11 @@
         <ImageView
             android:id="@+id/iv_movie_details_tb"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_weight="1"
-            android:layout_marginRight="16dp"
-            android:layout_height="wrap_content" />
+            android:contentDescription="@string/title_activity_detail"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -42,7 +43,7 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:numStars="10"
                 android:max="10"
-                android:layout_marginRight="2dp"
+                android:layout_marginEnd="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
